<resources>
    <string name="app_name" translatable="false">diverge</string>
    <string name="legacy_app_name" translatable="false">diverge legacy</string>
    <string name="samsung_app_name" translatable="false">diverge samsung</string>
    <string name="debug_app_name" translatable="false">debugger</string>
    <string name="showcase">showcase</string>
    <string name="drawer_name" translatable="false">diverge</string>
    <string name="android">Android version:</string>
    <string name="device">Device model:</string>
    <string name="search_play_store_url" translatable="false">https://play.google.com/store/search?q=Substratum%20Theme&amp;c=apps</string>
    <string name="search_play_store_url_icon_packs" translatable="false">https://play.google.com/store/search?q=Icon%20Pack&amp;c=apps</string>
    <string name="search_play_store_url_legacy" translatable="false">https://play.google.com/store/search?q=Substratum%20Legacy%20Theme&amp;c=apps</string>
    <string name="search_play_store_url_samsung" translatable="false">https://play.google.com/store/search?q=Substratum%20Samsung%20Theme&amp;c=apps</string>
    <string name="supported_roms_url" translatable="false">https://raw.githubusercontent.com/substratum/database/master/supported_roms.xml</string>
    <string name="tbo_theme_ready_url" translatable="false">http://forum.xda-developers.com/android/apps-games/apps-themeable-hangouts-layers-cmte-t3113192</string>
    <string name="substratum_github" translatable="false">https://github.com/substratum/substratum</string>
    <string name="substratum_github_commits" translatable="false">https://github.com/substratum/substratum/commits/dev</string>
    <string name="interfacer_github" translatable="false">https://github.com/substratum/interfacer</string>
    <string name="interfacer_github_commits" translatable="false">https://github.com/substratum/interfacer/commits/n-rootless</string>
    <string name="showcase_tabs" translatable="false">https://raw.githubusercontent.com/substratum/substratum/dev/showcase.xml</string>
    <string name="crowdin_url" translatable="false">"http://translate.projektsubstratum.com/"</string>
    <string name="validator_url" translatable="false">"https://raw.githubusercontent.com/substratum/database/master/commit_tracker.xml"</string>
    <string name="validator_whitelist_url" translatable="false">"https://raw.githubusercontent.com/substratum/database/master/commit_whitelist.xml"</string>
    <string name="themer_email" translatable="false">substratumthemers@gmail.com</string>
    <string name="sungstratum_url" translatable="false">https://play.google.com/store/apps/details?id=projekt.sungstratum</string>
    <string name="xda_sungstratum_link" translatable="false">https://forum.xda-developers.com/apps/substratum/7-0-substratum-sex-tw-beta-t3620796</string>
    <string name="resource_checker_request">Send commit merge request using&#8230;</string>
    <string name="resource_checker">Commit Validator</string>
    <string name="resource_checker_commons">Framework</string>
    <string name="resource_checker_dialog_quit">Exit</string>
    <string name="resource_not_validated">New commits have been merged!</string>
    <string name="resource_needs_internet">To validate your ROM\'s commits, please connect to the internet!</string>
    <string name="resource_validated">All commits intact!</string>
    <string name="resource_boolean" translatable="false">bool</string>
    <string name="resource_color" translatable="false">color</string>
    <string name="resource_dimension" translatable="false">dimens</string>
    <string name="resource_style" translatable="false">style</string>
    <string name="resource_commit_dialog_title">Missing Resources in %s</string>
    <string name="resource_commit_dialog_subject" translatable="false">Commit Merge Request</string>
    <string name="resource_commit_dialog_body" formatted="false" translatable="false">
        Themers,\n\nI have an unmerged commit on this ROM, and would
        like to see if you could help the ROM developers resolve this issue, thanks!
        \n\nDevice:%s\n\nReport:\n\n%s\n\nBuildProp:\n\n%s
    </string>
    <string name="showcase_no_connection">the theme showcase requires an internet connection to
        function!
    </string>
    <string name="showcase_no_themes">seems like there was an error caching the showcase database
        for this tab&#8230;
    </string>
    <string name="on_demand_updating_title">Resource Cache Initializer</string>
    <string name="on_demand_updating_text">%s\'s cache is now rebuilding&#8230;</string>
    <string name="background_updating_toast">diverge is getting a theme ready in the background,
        please wait for this to finish!
    </string>
    <string name="background_needs_invalidating">Oops! A corruption in the cache has occurred.</string>
    <string name="background_needs_invalidating_button">Wipe</string>
    <string name="background_updated_toast">Resource cache has been built!</string>
    <string name="background_updated_toast_cancel">This theme needs to upgrade its resource cache
        before it is functional!
    </string>
    <string name="background_updated_toast_rejected">Could not create resource cache for this theme!</string>
    <string name="background_updated_toast_cleaning">diverge is now clearing up this theme\'s
        resource cache&#8230;</string>
    <string name="failed_to_install_title_notification">Failed to install OMS theme</string>
    <string name="failed_to_install_text_notification">%s failed to install</string>
    <string name="actionbar_theme_count_singular">%s theme</string>
    <string name="actionbar_theme_count_plural">%s themes</string>
    <string name="actionbar_theme_count_loading">loading&#8230;</string>
    <string name="actionbar_search">Search</string>
    <string name="actionbar_changelog">Theme Changelog</string>
    <string name="settings_icons">Settings Icons</string>
    <string name="systemui_headers">System UI Headers</string>
    <string name="systemui_navigation">System UI Navigation</string>
    <string name="systemui_qs_tiles">System UI QS Tile Icons</string>
    <string name="systemui_statusbar">System UI Status Bar Icons</string>
    <string name="tbo_description">This theme supports Team Black Out\'s Theme Ready Google Apps, if
        you do not have them, you can click Download to be redirected to their XDA thread, or Cancel
        if you already have them!
    </string>
    <string name="two_description">This theme supports Google\'s stock apps, the way they were made!
        If you have Theme Ready Google Apps installed then you do not need to remove them,
        but they are not required for this theme!
    </string>
    <string name="tbo_dialog_proceed">Download</string>
    <string name="dynamic_gapps_dialog" translatable="false">Beans Gapps</string>
    <string name="dynamic_gapps_link" translatable="false">https://www.androidfilehost.com/?w=files&amp;flid=171925</string>
    <string name="open_gapps_dialog" translatable="false">Open Gapps</string>
    <string name="open_gapps_link" translatable="false">http://opengapps.org/</string>
    <string name="warning_title">WARNING!</string>
    <string name="dangerous_warning_content">diverge has detected that it is running on a
        BOOTLOOP-KNOWN FIRMWARE (Update between November 2016 and January 2017, N/N-MR1) and is
        strongly advising against applying any framework/Android System overlays.\n\nIf you choose
        to continue and end up in a bootloop, please flash the rescue archive found in
        "/storage/emulated/0/substratum/".
    </string>
    <string name="legacy_warning_content">Legacy is provided as-is as we cannot guarantee full
        compatibility with colors. Please ensure you have a custom recovery for your device and have
        an understanding on how to restore from a bootloop before proceeding any further.\n\nWe
        cannot fix things that are not getting themed on legacy because they require system side
        changes.
    </string>
    <string name="samsung_warning_content">Samsung support is provided as-is as we cannot guarantee
        full compatibility with colors and AOSP-built overlays. We have taken the care of hiding
        the dangerous overlays for your device, but you can toggle this off manually in settings
        at your own discretion.\n\nIf at any case you reach an issue with a possible black screen,
        please consult our XDA thread on the two methods of recovery.
    </string>
    <string name="legacy_dialog_soft_reboot_title">Reboot required!</string>
    <string name="legacy_dialog_soft_reboot_text">Running on the Resource Runtime Overlay system, it
        is required to perform a reboot after adding or removing overlays.\n\nProceeding with this
        dialog would automatically reboot your device, so please be sure to have saved your work
        before continuing.
    </string>
    <string name="activity_missing_toast">There were no apps found that could handle this
        request, sorry!
    </string>
    <string name="abort_overlay_toast_success">All overlays uninstalled!</string>
    <string name="rescue_toast">Rescuing your system&#8230;</string>
    <string name="reboot_awaiting_manager_title">OVERLAY AWAITING REBOOT</string>
    <string name="manager_theme_name">Theme:</string>
    <string name="manager_type1a">Type1a:</string>
    <string name="manager_type1b">Type1b:</string>
    <string name="manager_type1c">Type1c:</string>
    <string name="manager_type2">Type2 :</string>
    <string name="manager_type3">Type3 :</string>
    <string name="overlays_variant_substitute">%s&#8230;</string>
    <string name="overlays_variant_default_1a">type1a variant&#8230;</string>
    <string name="overlays_variant_default_1b">type1b variant&#8230;</string>
    <string name="overlays_variant_default_1c">type1c variant&#8230;</string>
    <string name="overlays_variant_default_2">type2 variant&#8230;</string>
    <string name="overlays_variant_default_3">default base variant&#8230;</string>
    <string name="overlays_up_to_date">UP-TO-DATE</string>
    <string name="overlays_update_available">Update available!\n(%s)</string>
    <string name="overlays_overlay_not_installed">Variant not installed</string>
    <string name="bootanimation_vm_exploded">Rendering of boot animation has been terminated due to
        insufficient memory allocation.\n\nInstallation of this boot animation is still possible
        without a rendered preview.
    </string>
    <string name="bootanimation_placeholder_text">please select a boot animation from the dropdown
        list&#8230;</string>
    <string name="bootanimation_default_spinner">please select a boot animation&#8230;</string>
    <string name="bootanimation_spinner_set_defaults">restore to default boot animation&#8230;
    </string>
    <string name="bootanimation_defaults_text">this will clear out any custom boot animations
        applied on your device</string>
    <string name="bootanimation_dialog_apply_text">Boot animation is processing&#8230;</string>
    <string name="bootanimation_dialog_apply_success">Boot animation applied!</string>
    <string name="bootanimation_dialog_apply_failed">Boot animation failed to apply&#8230;</string>
    <string name="wallpaper_dialog_wallpaper">Home screen wallpaper</string>
    <string name="wallpaper_dialog_lockscreen">Lock screen wallpaper</string>
    <string name="wallpaper_dialog_wallpaper_both">Home and Lock screen wallpaper</string>
    <string name="wallpaper_downloading">Loading the image into the cache&#8230;</string>
    <string name="nav_overlays">Overlays</string>
    <string name="nav_overlay_manager">Overlay list</string>
    <string name="nav_priorities">Priorities</string>
    <string name="nav_manage">Recovery</string>
    <string name="nav_settings">Settings</string>
</resources>