<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/tab_overlays"
        android:icon="@drawable/nav_overlays"
        android:title="@string/nav_overlays" />

    <item
        android:id="@+id/tab_manage"
        android:icon="@drawable/nav_overlay_manager"
        android:title="@string/nav_overlay_manager" />
    <item
        android:id="@+id/tab_priorities"
        android:icon="@drawable/nav_drawer_priorities"
        android:title="@string/nav_priorities" />
    <item
        android:id="@+id/tab_recovery"
        android:icon="@drawable/nav_manage"
        android:title="@string/nav_manage" />
    <item
        android:id="@+id/tab_settings"
        android:icon="@drawable/nav_drawer_settings"
        android:title="@string/nav_settings" />

</menu>
